Added new pics and added style

--- a/index.html
+++ b/index.html
@@ -5,113 +5,59 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+		<link href='https://fonts.googleapis.com/css?family=Lato:400,700,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles/main.css">
 		<title>Lans na balans</title>
 	</head>
 	<body>
-
-	
-		<!-- <div class="menu">
-			
-	
-			<div class="icon-close">
-				<i class="fa fa-times-circle fa-3x"></i>
-			</div>
-		
-			<ul>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</div>
-		
-		<div class="icon-menu">
-			<i class="fa fa-bars"></i>
-			Menu
-		</div>
-	</div> -->
-	
-	<div class="section"><div class="container"><div class="row"><div class="col-md-12"><hr></div></div><div class="row"><div class="col-md-12"><img src="images/Daria2.jpg" class="img-responsive"></div></div></div></div><div class="section"><div class="container"><div class="row"><div class="col-md-12"><p>Sport to moja pasja i sposób na życie. Interesują mnie różne dyscypliny, ale najbardziej fascynują mnie te, gdzie ćwiczenia fizyczne podporządkowane są treningowi mentalnemu. Najbliższy mi stał się Pilates, ze względu na to, że jest nie tylko zestawem ćwiczeń, ale pewną filozofią życia. Moim celem jest ciągły rozwój, dlatego na zajęciach chętnie podejmuję nowe wyzwania. Kładę nacisk na poprawność wykonywania ćwiczeń, bo to jest najważniejszą rzeczą, by zrozumieć, na czym polega Pilates. Pragnę Was zarazić swoją pasją do tej metody i przekonać, że Pilates to kontrola zarówno nad własnym ciałem jak i umysłem. </p></div></div>
-</div>
-</div>
-<div class="section">
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
+		<div class="container">
+			<h1>Lans na balans by Daria Loferska-Nędza</h1>
 			<hr>
-		</div>
-	</div>
-</div>
-</div>
-<div class="section">
-<div class="container">
-	
-</div>
-</div>
-<div class="section">
-<div class="container">
-	<div class="row">
-		<div class="col-md-12 text-justify">
-		</div>
-	</div>
-</div>
-</div>
-<div class="section">
-<div class="container">
-	<div class="row">
-		
-	</div>
-	<div class="row">
-		<div class="col-md-3">
-			
-		</div>
-		<div class="col-md-3">
-			
-		</div>
-		<div class="col-md-3">
-			
-		</div>
-		<div class="col-md-3">
-			
-		</div>
-	</div>
-</div>
-</div>
-<div class="section">
-<div class="container">
-	<div class="row">
-		<div class="col-md-3">
-			<img class="hidden-sm hidden-xs img-responsive" src="http://maps.googleapis.com/maps/api/staticmap?center=Tombouctou,Mali&amp;zoom=12&amp;size=200x200&amp;sensor=false">
-		</div>
-		<div class="col-md-9">
-			
-		</div>
-	</div>
-</div>
-</div>
-<footer class="section section-primary">
-<div class="container">
-	<div class="row">
-		<div class="col-sm-6">
-			<h3>Footer header</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisici elit, <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua. <br>Ut enim ad minim veniam, quis nostrud</p>
-		</div>
-		<div class="col-sm-6">
-			<p class="text-info text-right"> <br><br></p>
 			<div class="row">
-				<div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
-					<a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
-					<a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
-					<a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
-					<a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
-				</div></div>
-				<div class="row"> <div class="col-md-12 hidden-xs text-right">
-					<a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a>
-					<a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
-					<a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
-					<a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a> </div></div></div></div>
+				<div class="col-md-12">
+					<ul class="nav nav-tabs">
+						<li class="active">
+							<a href="#">Home</a>
+						</li>
+						<li class="blog">
+							<a href="http://lansnabalans.blog.pl">Blog</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			
+			<img src="images/main3.png">
+			
+			<div class="section">
+				<div class="row">
+					<div class="col-md-12">
+						<p>Sport to moja pasja i sposób na życie. Interesują mnie różne dyscypliny, ale najbardziej fascynują mnie te, gdzie ćwiczenia fizyczne podporządkowane są treningowi mentalnemu. Najbliższy mi stał się Pilates, ze względu na to, że jest nie tylko zestawem ćwiczeń, ale pewną filozofią życia. <br/><br/>Moim celem jest ciągły rozwój, dlatego na zajęciach chętnie podejmuję nowe wyzwania. Kładę nacisk na poprawność wykonywania ćwiczeń, bo to jest najważniejszą rzeczą, by zrozumieć, na czym polega Pilates. Pragnę Was zarazić swoją pasją do tej metody i przekonać, że Pilates to kontrola zarówno nad własnym ciałem jak i umysłem. </p>
+					</div>
+				</div>
+			</div>
+			<hr>
+			<div class="social_media">
+			<h3>Kontakt:</h3>
+				<a href="mailto:lansnabalans@gmail.com"><i class="fa fa-envelope-o fa-2x text-inverse"></i></a>
+				<a href="http://lansnabalans.blog.pl"><i class="fa fa-2x fa-wordpress text-inverse"></i></a>
+				<a href="https://www.facebook.com/lansnabalans/"><i class="fa fa-2x fa-fw fa-facebook text-inverse"></i></a>
+			</div>
+			<hr>
+
+
+
+			</div> <!-- Last div to close main container -->
+			<div class="container">
+				<footer>
+					<i class="fa fa-copyright"></i>
+					<script type="text/javascript">
+					document.write(new Date().getFullYear());
+					</script><a href="http://magdalenajadach.github.io"> Magdalena Jadach</a>
+					<br />
+					<p>Icons <i class="fa fa-hand-o-right"></i><a href="http://fortawesome.github.io/Font-Awesome/"> Font Awesome</a></p>
 				</footer>
-				<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-				<script src="scripts/app.js"></script>
-			</body>
-		</html>
+			</div>
+			<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+			<script src="scripts/app.js"></script>
+		</body>
+	</html>
