--- a/index.html
+++ b/index.html
@@ -26,21 +26,32 @@
 				</div>
 			</div>
 			
-			<img src="images/main3.png">
+			<img src="images/main.png">
 			
-			<div class="section">
+			<section>
 				<div class="row">
 					<div class="col-md-12">
-						<p>Sport to moja pasja i sposób na życie. Interesują mnie różne dyscypliny, ale najbardziej fascynują mnie te, gdzie ćwiczenia fizyczne podporządkowane są treningowi mentalnemu. Najbliższy mi stał się Pilates, ze względu na to, że jest nie tylko zestawem ćwiczeń, ale pewną filozofią życia. <br/><br/>Moim celem jest ciągły rozwój, dlatego na zajęciach chętnie podejmuję nowe wyzwania. Kładę nacisk na poprawność wykonywania ćwiczeń, bo to jest najważniejszą rzeczą, by zrozumieć, na czym polega Pilates. Pragnę Was zarazić swoją pasją do tej metody i przekonać, że Pilates to kontrola zarówno nad własnym ciałem jak i umysłem. </p>
+						<p class="pilates">Sport to moja pasja i sposób na życie. Interesują mnie różne dyscypliny, ale najbardziej fascynują mnie te, gdzie ćwiczenia fizyczne podporządkowane są treningowi mentalnemu. Najbliższy mi stał się Pilates, ze względu na to, że jest nie tylko zestawem ćwiczeń, ale pewną filozofią życia. <br/><br/>Moim celem jest ciągły rozwój, dlatego na zajęciach chętnie podejmuję nowe wyzwania. Kładę nacisk na poprawność wykonywania ćwiczeń, bo to jest najważniejszą rzeczą, by zrozumieć, na czym polega Pilates. Pragnę Was zarazić swoją pasją do tej metody i przekonać, że Pilates to kontrola zarówno nad własnym ciałem jak i umysłem. </p>
 					</div>
 				</div>
-			</div>
+			</section>
 			<hr>
+
+			<section class="trening">
+				<div class="row">
+					<div class="col-md-12">
+					<p><a href="http://www.onepilates.pl/">Prowadzę zajęcia w krakowskich klubach: One Pilates Studio</a> i <a href="http://gtxfitness.eu/">GTX Trainning Division</a></p>
+					<p>Zapraszam także do indywidualnych zajęć w ramach trenningu personalnego. </p>
+			</div>
+			</div>
+			</section>
+
+
 			<div class="social_media">
 			<h3>Kontakt:</h3>
-				<a href="mailto:lansnabalans@gmail.com"><i class="fa fa-envelope-o fa-2x text-inverse"></i></a>
 				<a href="http://lansnabalans.blog.pl"><i class="fa fa-2x fa-wordpress text-inverse"></i></a>
 				<a href="https://www.facebook.com/lansnabalans/"><i class="fa fa-2x fa-fw fa-facebook text-inverse"></i></a>
+				<a href="mailto:lansnabalans@gmail.com"><i class="fa fa-envelope fa-2x text-inverse"></i></a>
 			</div>
 			<hr>
 
@@ -52,9 +63,8 @@
 					<i class="fa fa-copyright"></i>
 					<script type="text/javascript">
 					document.write(new Date().getFullYear());
-					</script><a href="http://magdalenajadach.github.io"> Magdalena Jadach</a>
-					<br />
-					<p>Icons <i class="fa fa-hand-o-right"></i><a href="http://fortawesome.github.io/Font-Awesome/"> Font Awesome</a></p>
+					</script><a href="http://magdalenajadach.github.io"> Powered by_ Magdalena Jadach</a>
+					<!-- <p>Icons <i class="fa fa-hand-o-right"></i><a href="http://fortawesome.github.io/Font-Awesome/"> Font Awesome</a></p> -->
 				</footer>
 			</div>
 			<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
